# Frequency-transformation-and-analysis

./: README.md  pyproject.toml
src/: 01_Fourrier_smoothing.ipynb  02_Fourrier_extrapolation.ipynb  03_LOWESS_smoothing.ipynb  03_Trend_decomposition.ipynb  04_Wavelets_smoothing.ipynb  05_Wavelets_spectrum_analysis.ipynb  06_EMD_smoothing.ipynb  07_Hurst_exponent_and_fractal.ipynb  08_LOWESS_smoothing.ipynb
src/modules/: data_fetcher.py  filters.py
